...
    <string name="title_activity_test">Test</string>
    <string name="tilf_j">Add</string>
    <string name="slet">Delete</string>
    <string name="engelsk">EN</string>
    <string name="auto">?</string>
    <string name="dansk">DK</string>
    <string name="indstillinger">Settings</string>
    <string name="enter_text">Enter text</string>
    <string name="save">Save</string>
    <string name="subscription_key">Subscription Key</string>
    <string name="resource_locale">Resource Locale</string>
    <string name="title_activity_display_text">displayText</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
...
